--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
     "moment": "^2.29.1",
     "nodemon": "^2.0.6"
   }
