--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "moment": "^2.29.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "turbolinks-express": "^1.0.0"
   }
 }
