--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "battlefy-api": "^1.1.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "nodemon": "^2.0.6",
+    "riotgames-gg": "0.0.7",
     "turbolinks-express": "^1.0.0"
   }
 }
